[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genomic-health-pipeline"
version = "0.2.0"
description = "Population-normalized polygenic risk with genotype × phenotype convergence scoring and confounder-weighted longitudinal biomarker analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Pranitha Kondipamula", email = "pranitha.kondipamula@gmail.com" },
]
keywords = [
    "polygenic risk score",
    "precision health",
    "multi-omic",
    "biomarker",
    "population normalization",
    "hardy-weinberg",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.18",
]
reports = [
    "python-docx>=1.1",
]
fast-data = [
    # polars 1.x is the current major series; the 0.18 pin in the old
    # requirements.txt was several years stale by release date.
    "polars>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "hypothesis>=6.100",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/pranithakondipamula/genomic-health-pipeline"
Repository = "https://github.com/pranithakondipamula/genomic-health-pipeline"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning:scipy.*",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # line length — handled by black
]

[tool.black]
line-length = 88
target-version = ["py310"]
